# Safehouse-legacy

./: README.md
src/safehouse-client/: README.md  package-lock.json  package.json
src/safehouse-client/src/: index.ejs
src/safehouse-client/src/main/: index.js
src/safehouse-client/src/renderer/: App.vue  main.js
src/safehouse-client/src/renderer/api/: client.js
src/safehouse-client/src/renderer/api/auth/: Auth.js  User.js
src/safehouse-client/src/renderer/api/clients/: ApiClient.js  AuthClient.js  UserClient.js
src/safehouse-client/src/renderer/components/: Chat.vue  Login.vue
src/safehouse-client/src/renderer/components/chat/: ActiveChat.vue
src/safehouse-client/src/renderer/components/chat/messages/: PictureMessage.vue
src/safehouse-client/src/renderer/components/contacts/: AddContact.vue  ContactsBar.vue
src/safehouse-client/src/renderer/components/user/: UserController.vue
src/safehouse-client/src/renderer/realtime/: Message.js  Realtime.js
src/safehouse-client/src/renderer/router/: index.js
src/safehouse-client/src/renderer/store/modules/: Chat.js  User.js
src/safehouse-server/: Cargo.toml  Rocket.toml
src/safehouse-server/src/: api.rs  auth.rs  database.rs  error.rs  main.rs  models.rs  realtime.rs
