[package]
name = "safehouse-server"
version = "0.1.0"
authors = ["Leon Hartley <dev@leonh.net>"]

[dependencies]
ws = "0.7.6"
nickel = "0.10.1"
rustc-serialize = "0.3"
lazy_static = "*"
jwt = "*"
rust-crypto = "0.2.36"
byteorder = "1.2.2"
bytebuffer = "0.2.0"

[dependencies.mysql]
version = "*"

[dependencies.hyper]
version = "0.10"
default-features = false